k8s/apps/keys/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keys

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keys
  namespace: keys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keys
  template:
    metadata:
      labels:
        app: keys
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: keys
        image: rssnyder/keys:test
        imagePullPolicy: IfNotPresent
        ports:
        - name: api
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: keys
  namespace: keys
  annotations:
    external-dns.alpha.kubernetes.io/hostname: keys.r.ss
spec:
  type: LoadBalancer
  selector:
    app: keys
  ports:
  - name: web
    port: 80
    targetPort: api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keys
  namespace: keys
spec:
  ingressClassName: nginx
  rules:
    - host: keys.pve.rileysnyder.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  keys
                port:
                  number: 80
